Removes one redundant assignment

--- a/overview/contents.tex
+++ b/overview/contents.tex
@@ -540,15 +540,15 @@
     \end{itemize}
   \end{idea}
 
-  \pause{}
-
-  \begin{exercise}
-    \begin{itemize}
-      \item Say Alice and Bob want to communicate.
-      \item Eve wants to eavesdrop as usual.
-      \item What are the requirements of such a system?
-    \end{itemize}
-  \end{exercise}
+%  \pause{}
+%
+%  \begin{exercise}
+%    \begin{itemize}
+%      \item Say Alice and Bob want to communicate.
+%      \item Eve wants to eavesdrop as usual.
+%      \item What are the requirements of such a system?
+%    \end{itemize}
+%  \end{exercise}
 \end{frame}
 
 \begin{frame}
