--- a/overview/overview.bib
+++ b/overview/overview.bib
@@ -57,3 +57,11 @@
   pages={5--38, 161--191},
   year={1883}
 }
+
+@phdthesis{GentryFullyHomomorphicEncryption,
+  title={A fully homomorphic encryption scheme},
+  author={Gentry, Craig},
+  year={2009},
+  school={Stanford University},
+  URL={https://crypto.stanford.edu/craig/craig-thesis.pdf},
+}
