Corrects typo in citation

--- a/overview/abstract.tex
+++ b/overview/abstract.tex
@@ -18,5 +18,5 @@ Chapter 14 in Gollmann's \citetitle{Gollmann2011cs}~\cite{Gollmann2011cs}.
 To practice your understanding of these mechanisms it is recommended to do 
 exercises 14.2, 14.3 and 14.7 in~\cite{Gollmann2011cs}.
 We will also cover some topics from 
-\citetitle{Katz-Lindell}~\cite{Katz-Lindell} and 
+\citetitle{KatzLindell-v1}~\cite{KatzLindell-v1} and 
 \citetitle{GoldreichFOC-1}~\cite{GoldreichFOC-1}.
