Adds various environments from templates

--- a/overview/overview-slides.tex
+++ b/overview/overview-slides.tex
@@ -1,17 +1,61 @@
-%\documentclass[ignoreframetext,handout]{beamer}
 \documentclass[ignoreframetext]{beamer}
 \input{preamble.tex}
 
-\ProvideDocumentEnvironment{exercise}{o}{%
-  \setbeamercolor{block body}{bg=yellow!30,fg=black}
-  \setbeamercolor{block title}{bg=yellow,fg=black}
+\usetheme{Berlin}
+\setbeamertemplate{footline}%{miniframes theme}
+{%
+  \begin{beamercolorbox}[colsep=1.5pt]{upper separation line foot}
+  \end{beamercolorbox}
+  \begin{beamercolorbox}[ht=2.5ex,dp=1.125ex,%
+    leftskip=.3cm,rightskip=.3cm plus1fil]{author in head/foot}%
+    \leavevmode{\usebeamerfont{author in head/foot}\insertshortauthor}%
+    \hfill%
+    {\usebeamerfont{institute in head/foot}\usebeamercolor[fg]{institute in head/foot}\insertshortinstitute}%
+  \end{beamercolorbox}%
+  \begin{beamercolorbox}[ht=2.5ex,dp=1.125ex,%
+    leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
+    {\usebeamerfont{title in head/foot}\insertshorttitle} \hfill     \insertframenumber%
+  \end{beamercolorbox}%
+  \begin{beamercolorbox}[colsep=1.5pt]{lower separation line foot}
+  \end{beamercolorbox}
+}
+\setbeamercovered{transparent}
+\setbeamertemplate{bibliography item}[text]
+
+\AtBeginSection[]{%
+  \begin{frame}<beamer>
+    \tableofcontents[currentsection]
+  \end{frame}
+}
+
+\ProvideDocumentEnvironment{assumption}{o}{%
   \IfValueTF{#1}{%
-    \begin{block}{Exercise: #1}
+    \begin{block}{Assumption: #1}
   }{%
-    \begin{block}{Exercise}
+    \begin{block}{Assumption}
   }
 }{%
   \end{block}
+}
+
+\ProvideDocumentEnvironment{Protocol}{o}{%
+  \IfValueTF{#1}{%
+    \begin{block}{Protocol: #1}
+  }{%
+    \begin{block}{Protocol}
+  }
+}{%
+  \end{block}
+}
+
+\ProvideDocumentEnvironment{remark}{o}{%
+  \IfValueTF{#1}{%
+    \begin{alertblock}{Note: #1}
+  }{%
+    \begin{alertblock}{Note}
+  }
+}{%
+  \end{alertblock}
 }
 
 \ProvideDocumentEnvironment{idea}{o}{%
@@ -24,38 +68,32 @@
   \end{block}
 }
 
-\ProvideDocumentEnvironment{remark}{o}{%
+\ProvideDocumentEnvironment{question}{o}{%
+  \setbeamercolor{block body}{bg=orange!15,fg=black}
+  \setbeamercolor{block title}{bg=orange,fg=white}
+  \setbeamercolor{local structure}{fg=orange}
   \IfValueTF{#1}{%
-    \begin{alertblock}{Remark: #1}
+    \begin{block}{Question: #1}
   }{%
-    \begin{alertblock}{Remark}
+    \begin{block}{Question}
   }
 }{%
-  \end{alertblock}
+  \end{block}
 }
 
-\mode<presentation>{%
-  \usetheme{Berlin}
-  \setbeamercovered{transparent}
-  \setbeamertemplate{bibliography item}[text]
-  \setbeamertemplate{footline}{%
-    \begin{beamercolorbox}[colsep=1.5pt]{upper separation line foot}
-    \end{beamercolorbox}
-    \begin{beamercolorbox}[ht=2.5ex,dp=1.125ex,%
-      leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
-      {\usebeamerfont{title in head/foot}\insertshorttitle}
-      \hfill\insertframenumber%
-    \end{beamercolorbox}%
-    \begin{beamercolorbox}[colsep=1.5pt]{lower separation line foot}
-    \end{beamercolorbox}
+\ProvideDocumentEnvironment{exercise}{o}{%
+  \setbeamercolor{block body}{bg=yellow!10,fg=black}
+  \setbeamercolor{block title}{bg=yellow,fg=black}
+  \setbeamercolor{local structure}{fg=yellow}
+  \IfValueTF{#1}{%
+    \begin{block}{Exercise: #1}
+  }{%
+    \begin{block}{Exercise}
   }
+}{%
+  \end{block}
 }
 
-\AtBeginSection[]{%
-  \begin{frame}
-    \tableofcontents[currentsection]
-  \end{frame}
-}
 
 \begin{document}
 \mode<all>
