Adds EOCS to references

--- a/overview/abstract.tex
+++ b/overview/abstract.tex
@@ -1,11 +1,13 @@
 To fully understand how many security mechanisms can be implemented we need 
-cryptography, as cryptography has a central role in a lot of security.
+cryptography, as cryptography has a central role in many parts of security.
 This learning session is intended to give a high-level overview of 
 cryptography: symmetric cryptography, public-key encryption, digital 
 signatures, zero-knowledge proofs, and multi-party computation.
 
-We will treat
+The basics are covered by
 Chapter 5 in Anderson's \citetitle{Anderson2008sea}~\cite{Anderson2008sea} and
 Chapter 14 in Gollmann's \citetitle{Gollmann2011cs}~\cite{Gollmann2011cs}.
-To practice your understanding of these mechanisms it is recommended to do 
-exercises 14.2, 14.3 and 14.7 in~\cite{Gollmann2011cs}.
+(To practice your understanding of these mechanisms it is recommended to do 
+exercises 14.2, 14.3 and 14.7 in~\cite{Gollmann2011cs}.)
+For the remaining topics, however, we refer to the \citetitle{EOCS}~\cite{EOCS} 
+(and cited papers and books).
