--- a/overview/overview.bib
+++ b/overview/overview.bib
@@ -1,3 +1,10 @@
+@book{EOCS,
+  title={Encyclopedia of cryptography and security},
+  author={Van Tilborg, Henk CA and Jajodia, Sushil},
+  year={2014},
+  publisher={Springer Science \& Business Media}
+}
+
 @book{Anderson2008sea,
   author={Anderson, Ross J.},
   title={Security Engineering},
