--- a/sidechannels/sidechannels.tex
+++ b/sidechannels/sidechannels.tex
@@ -52,7 +52,7 @@
 }
 
 \usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
-\addbibresource{overview.bib}
+\addbibresource{sidechannels.bib}
 
 \title{%
   Side Channels and Covert Channels
