Removes Syntastic warning

--- a/sidechannels/contents.tex
+++ b/sidechannels/contents.tex
@@ -245,7 +245,7 @@
   \begin{figure}
     \includegraphics[height=0.9\textheight]{em-laptop.png}
   \end{figure}
-  \cite{FlatPanelEmissions}
+  %\cite{FlatPanelEmissions}
 \end{frame}
 
 
