--- a/sidechannels/contents.tex
+++ b/sidechannels/contents.tex
@@ -31,25 +31,52 @@
 
 \begin{frame}
   \begin{definition}[Side Channel]
-    A \emph{side channel} is an unintended channel emitting information which 
-    is due to physical implementation flaws and not theoretical weaknesses or 
-    forcing attempts.
+    \begin{itemize}
+      \item Unintended channel emitting information
+      \item Due to physical implementation flaws and not theoretical weaknesses 
+        or forcing attempts.
+    \end{itemize}
   \end{definition}
+\end{frame}
+
+\begin{frame}
+  \begin{itemize}
+    \item There are various categories, \eg
+      \begin{itemize}
+        \item timing attacks,
+        \item acoustic attacks,
+        \item electromagnetic attacks,
+        \item \dots
+      \end{itemize}
+  \end{itemize}
+\end{frame}
+
+
+\section{Timing attacks}
+
+\subsection{Doing arithmetic}
+
+\begin{frame}
   \begin{example}
-    Using the standard algorithms for addition and multiplication (using the 
-    binary number system) we can easily see that the time to perform \(3\times 
-    25\) and \(7\times 25\) will be different.
+    \begin{itemize}
+      \item Use the standard algorithms for addition and multiplication (using 
+        the binary number system).
+      \item Give any number to an algorithm \(A\).
+      \item \(A\) will multiply your number by a secret value \(x\).
+      \item Can you tell the difference between \(x = 3\) or \(x = 7\)?
+    \end{itemize}
   \end{example}
 \end{frame}
 
 \begin{frame}
   \begin{itemize}
+    \item Assume that we give the number \(25\) as our challenge to \(A\).
     \item Looking at the numbers we have we see that \(3_{10} = 11_2\), 
       \(7_{10} = 111_2\) and \(25_{10} = 11001_2\)
 
     \item Assume each step in the algorithm takes one time unit.
 
-    \item Then for \(11001\times 11\) we get:
+    \item Then \(11001\times 11\) will take \(17\) time units:
       \begin{itemize}
         \item \(5\) time units for multiplying the last \(1\) in \(11\) with 
           each digit in \(11001\),
@@ -62,7 +89,7 @@
         \item finally, we get \(6\) time units for adding the numbers.
       \end{itemize}
 
-    \item For \(11001\times 111\) we get:
+    \item \(11001\times 111\) will take \(24\) time units:
       \begin{itemize}
         \item \(5\) time units for each digit, hence \(15\) in total,
 
@@ -89,17 +116,6 @@
   \end{itemize}
 \end{frame}
 
-\subsection{Timing Attacks}
-
-\begin{frame}
-  \begin{itemize}
-    \item The first example was a timing attack.
-    \item We can measure the time for different operations.
-    \item Depending on the times it takes we can figure out something about the 
-      operands.
-  \end{itemize}
-\end{frame}
-
 \begin{frame}
   \begin{example}[SSH password guessing]
     \begin{itemize}
@@ -115,37 +131,19 @@
   \end{example}
 \end{frame}
 
-\begin{frame}
-  \begin{block}{Anonymized traffic with onion routing}
-    \begin{itemize}
-      \item Alice sends a message encrypted in three layers to Bob.
-      \item Bob removes the outermost layer and sends to Carol.
-      \item Carol removes the (next) outermost layer and sends to David.
-      \item David removes the final layer and sends to destination.
-    \end{itemize}
-  \end{block}
-
-  \pause{}
-
-  \begin{example}[De-anonymize traffic]
-    \begin{itemize}
-      \item We can also perform time-correlation attacks against anonymity 
-        systems.
-
-      \item Measure how long it takes between something goes in and something 
-        comes out.
-
-      \item Then we can figure out who is sending where.
-    \end{itemize}
-  \end{example}
-\end{frame}
-
-\subsection{Traffic Analysis}
+\subsection{Summary}
 
 \begin{frame}
+  \begin{itemize}
+    \item The first example was a timing attack.
+    \item We can measure the time for different operations.
+    \item Depending on the times it takes we can figure out something about the 
+      operands.
+  \end{itemize}
 \end{frame}
 
-\subsection{Acoustic Attacks}
+
+\section{Acoustic attacks}
 
 \begin{frame}
   \begin{itemize}
@@ -246,6 +244,21 @@
     \includegraphics[height=0.9\textheight]{em-laptop.png}
   \end{figure}
   %\cite{FlatPanelEmissions}
+\end{frame}
+
+\section{Summary}
+
+\begin{frame}
+  \begin{itemize}
+    \item
+  \end{itemize}
+
+  \begin{remark}
+    \begin{itemize}
+      \item Covert channels is a related topic.
+      \item We will return to that.
+    \end{itemize}
+  \end{remark}
 \end{frame}
 
 
