--- a/sidechannels/sidechannels.bib
+++ b/sidechannels/sidechannels.bib
@@ -11,7 +11,26 @@
   keywords={IT-s{\"a}kerhet},
 }
 
-@incollection{acoustic,
+@Article{VoltageKeyExtraction,
+  author="Genkin, Daniel
+      and Pipman, Itamar
+      and Tromer, Eran",
+  title="Get your hands off my laptop: physical side-channel key-extraction 
+      attacks on PCs",
+  journal="Journal of Cryptographic Engineering",
+  year="2015",
+  month="Jun",
+  day="01",
+  volume="5",
+  number="2",
+  pages="95--112",
+  abstract="We demonstrate physical side-channel attacks on a popular software implementation of RSA and ElGamal, running on laptop computers. Our attacks use novel side channels, based on the observation that the ``ground'' electric potential, in many computers, fluctuates in a computation-dependent way. An attacker can measure this signal by touching exposed metal on the computer's chassis with a plain wire, or even with a bare hand. The signal can also be measured on the ground shield at the remote end of Ethernet, USB and display cables. Through suitable cryptanalysis and signal processing, we have extracted 4096-bit RSA keys and 3072-bit ElGamal keys from laptops, via each of these channels, as well as via power analysis and electromagnetic probing. Despite the GHz-scale clock rate of the laptops and numerous noise sources, the full attacks require a few seconds of measurements using Medium Frequency (MF) signals (around 2 MHz), or one hour using Low Frequency (LF) signals (up to 40  kHz).",
+  issn="2190-8516",
+  doi="10.1007/s13389-015-0100-7",
+}
+
+
+@incollection{AcousticKeyExtraction,
   author={Genkin, Daniel and Shamir, Adi and Tromer, Eran},
   title={RSA Key Extraction via Low-Bandwidth Acoustic Cryptanalysis},
   editor={Garay, JuanA. and Gennaro, Rosario},
@@ -31,6 +50,39 @@
   year={2013},
   institution={Cryptology ePrint Archive, Report 2013/857, 2013.},
   URL={http://eprint.iacr.org/2013/857},
+}
+
+@InProceedings{ElectromagneticKeyExtraction,
+  author="Genkin, Daniel
+      and Pachmanov, Lev
+      and Pipman, Itamar
+      and Tromer, Eran",
+  editor="G{\"u}neysu, Tim
+      and Handschuh, Helena",
+  title="Stealing Keys from PCs Using a Radio: Cheap Electromagnetic Attacks on 
+      Windowed Exponentiation",
+  booktitle="Cryptographic Hardware and Embedded Systems -- CHES 2015",
+  year="2015",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="207--228",
+  abstract="We present new side-channel attacks on RSA and ElGamal 
+      implementations that use sliding-window or fixed-window (m-ary) modular 
+      exponentiation. The attacks extract decryption keys using a very low 
+      measurement bandwidth (a frequency band of less than 100 kHz around a 
+                             carrier under 2 MHz) even when attacking multi-GHz 
+      CPUs.",
+  isbn="978-3-662-48324-4"
+}
+
+
+
+@misc{cryptoeprint:2015:170,
+    author = {Daniel Genkin and Lev Pachmanov and Itamar Pipman and Eran Tromer},
+    title = {Stealing Keys from PCs using a Radio: Cheap Electromagnetic Attacks on Windowed Exponentiation},
+    howpublished = {Cryptology ePrint Archive, Report 2015/170},
+    year = {2015},
+    note = {\url{https://eprint.iacr.org/2015/170}},
 }
 
 @inproceedings{song2001timing,
