Adjusts affiliation in sidechannels

--- a/sidechannels/contents.tex
+++ b/sidechannels/contents.tex
@@ -2,8 +2,8 @@
   Side-channel attacks
 }
 \author{Daniel Bosk}
-\institute[MIUN ICS]{%
-  Department of Information and Communication Systems (ICS),\\
+\institute[MIUN IST]{%
+  Department of Information Systems and Technology\\
   Mid Sweden University, Sundsvall.
 }
 \date{\today}
