[overview] Adds short outline (fixes #24)

--- a/overview/contents.tex
+++ b/overview/contents.tex
@@ -107,6 +107,28 @@
   \end{remark}
 \end{frame}
 
+\subsection{Outline}
+
+\begin{frame}
+  \begin{description}
+    \item[Shared-key]
+      Stems from the classical crypto where a key is shared between two users.
+
+      \pause
+
+    \item[Public-key]
+      This is more modern crypto, from 1970s.
+      Each user has a public and a private key.
+
+      \pause
+
+    \item[Counter-intuitive]
+      More modern, from 1980s and onwards.
+      How to do computations on secret inputs, prove knowledge without revealing 
+      of what.
+  \end{description}
+\end{frame}
+
 
 \section{Symmetric Cryptography}
 
@@ -544,7 +566,7 @@
   \pause{}
 
   \begin{remark}
-    This is proven secure in \cite{HMAC}!
+    This is proven secure in by \textcite{HMAC}!
   \end{remark}
 \end{frame}
 
