[overview] Adjusts titles

--- a/overview/contents.tex
+++ b/overview/contents.tex
@@ -130,7 +130,7 @@
 \end{frame}
 
 
-\section{Symmetric Cryptography}
+\section{Shared-key cryptography}
 
 \subsection{Ciphers}
 
@@ -342,7 +342,7 @@
   \end{definition}
 \end{frame}
 
-\subsection{Hash Functions}
+\subsection{Hash functions}
 
 \begin{frame}
   \begin{idea}
@@ -571,9 +571,9 @@
 \end{frame}
 
 
-\section{Public-Key Cryptography}
+\section{Public-key cryptography}
 
-\subsection{Key-Exchange Schemes}
+\subsection{Key-exchange schemes}
 
 \begin{frame}
   \begin{idea}
@@ -716,7 +716,7 @@
   \end{definition}
 \end{frame}
 
-\subsection{Encryption and Decryption}
+\subsection{Encryption and decryption}
 
 \begin{frame}
   \begin{idea}
@@ -750,7 +750,7 @@
   \end{definition}
 \end{frame}
 
-\subsection{Digital Signatures}
+\subsection{Digital signatures}
 
 \begin{frame}
   \begin{idea}
@@ -812,7 +812,7 @@
   \end{remark}
 \end{frame}
 
-\subsection{Homomorphic Properties}
+\subsection{Homomorphic properties}
 
 \begin{frame}
   \begin{definition}[Homomorphism]
@@ -900,12 +900,12 @@
 \end{frame}
 
 
-\section{More Counter-Intuitive Things}
+\section{More counter-intuitive things}
 
-\subsection{(Secure) Multi-Party Computation}
+\subsection{Secure multi-party computation}
 
 \begin{frame}
-  \begin{example}[Yao's millionaires' problem]
+  \begin{example}[Yao's Millionaires' Problem]
     \begin{itemize}
       \item Two millionaires meet in the street.
       \item They want to find out who is the richer.
@@ -1061,7 +1061,7 @@
   \end{example}
 \end{frame}
 
-\subsection{Zero-Knowledge Proofs of Knowledge}
+\subsection{Zero-knowledge proofs of knowledge}
 
 \begin{frame}
   \begin{example}
