--- a/overview/overview-slides.tex
+++ b/overview/overview-slides.tex
@@ -28,72 +28,7 @@
   \end{frame}
 }
 
-\ProvideDocumentEnvironment{assumption}{o}{%
-  \IfValueTF{#1}{%
-    \begin{block}{Assumption: #1}
-  }{%
-    \begin{block}{Assumption}
-  }
-}{%
-  \end{block}
-}
-
-\ProvideDocumentEnvironment{Protocol}{o}{%
-  \IfValueTF{#1}{%
-    \begin{block}{Protocol: #1}
-  }{%
-    \begin{block}{Protocol}
-  }
-}{%
-  \end{block}
-}
-
-\ProvideDocumentEnvironment{remark}{o}{%
-  \IfValueTF{#1}{%
-    \begin{alertblock}{Note: #1}
-  }{%
-    \begin{alertblock}{Note}
-  }
-}{%
-  \end{alertblock}
-}
-
-\ProvideDocumentEnvironment{idea}{o}{%
-  \IfValueTF{#1}{%
-    \begin{block}{Idea: #1}
-  }{%
-    \begin{block}{Idea}
-  }
-}{%
-  \end{block}
-}
-
-\ProvideDocumentEnvironment{question}{o}{%
-  \setbeamercolor{block body}{bg=orange!15,fg=black}
-  \setbeamercolor{block title}{bg=orange,fg=white}
-  \setbeamercolor{local structure}{fg=orange}
-  \IfValueTF{#1}{%
-    \begin{block}{Question: #1}
-  }{%
-    \begin{block}{Question}
-  }
-}{%
-  \end{block}
-}
-
-\ProvideDocumentEnvironment{exercise}{o}{%
-  \setbeamercolor{block body}{bg=yellow!10,fg=black}
-  \setbeamercolor{block title}{bg=yellow,fg=black}
-  \setbeamercolor{local structure}{fg=yellow}
-  \IfValueTF{#1}{%
-    \begin{block}{Exercise: #1}
-  }{%
-    \begin{block}{Exercise}
-  }
-}{%
-  \end{block}
-}
-
+\usepackage{beamer-didactic}
 
 \begin{document}
 \mode<all>
