Moves title etc from contents to main file

--- a/overview/overview-slides.tex
+++ b/overview/overview-slides.tex
@@ -31,7 +31,30 @@
 \usepackage{beamer-didactic}
 
 \begin{document}
-\mode<all>
-\input{contents.tex}
+\title{%
+  A High-Level Overview of Cryptography
+}
+\author{%
+  Daniel Bosk
+}
+\institute[KTH/MIUN]{%
+  School of Computer Science and Communication,\\
+  KTH Royal Institute of Technology, Stockholm
+  \and
+  Department of Information and Communication Systems,\\
+  Mid Sweden University, Sundsvall
+}
+\date{\today}
+
 \mode*
+
+\begin{frame}
+\maketitle
+\end{frame}
+
+\begin{abstract}
+  \input{abstract.tex}
+\end{abstract}
+
+\mode<all>{\input{contents.tex}}
 \end{document}
