Adapts README and abstract for one-way functions (WIP)

--- a/one-way/abstract.tex
+++ b/one-way/abstract.tex
@@ -1,24 +1,15 @@
-Cryptography has a central role in security.
-To fully understand how many security mechanisms can be implemented we need 
-cryptography.
-For this reason, we also need higher-level knowledge about what can be achieved 
-with cryptography to not limit our thoughts about possible solutions.
-This learning session is intended to give a high-level one-way of 
-cryptography: \ac{SKE}, \ac{PKE}, digital signatures, \ac{ZKP} and \ac{MPC}.
-In particular, the \acp{ILO} are that you should be able to
+One-way functions is a core building block in modern cryptography.
+This session covers the basic property, hash functions and \acp{MAC}.
+
+The \acp{ILO} are that you should be able
 \begin{itemize}
-  \item \emph{understand} what properties can be achieved with cryptography.
-  \item \emph{analyse} a situation and \emph{suggest} what cryptographic 
-    properties are desirable.
+  \item to \emph{apply} one-way functions to security problems.
 \end{itemize}
 
 The basics are covered by
 Chapter 5 in Anderson's \citetitle{Anderson2008sea}~\cite{Anderson2008sea} and
 Chapter 14 in Gollmann's \citetitle{Gollmann2011cs}~\cite{Gollmann2011cs}.
-(To practice your understanding of these mechanisms it is recommended to do 
-exercises 14.2, 14.3 and 14.7 in~\cite{Gollmann2011cs}.)
 %We will also cover some topics from 
 %\citetitle{KatzLindell-v1}~\cite{KatzLindell-v1} and 
 %\citetitle{GoldreichFOC-1}~\cite{GoldreichFOC-1}.
-For the remaining topics, however, we refer to the \citetitle{EOCS}~\cite{EOCS} 
-(and cited papers and books).
+We also refer to the \citetitle{EOCS}~\cite{EOCS}.
