Breaks out zkp-smc and nothing is left of overview

--- a/zkp-smc/preamble.tex
+++ b/zkp-smc/preamble.tex
@@ -14,7 +14,7 @@
 
 \setbeamertemplate{bibliography item}[text]
 \usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
-\addbibresource{overview.bib}
+\addbibresource{bibliography.bib}
 \addbibresource{crypto.bib}
 \addbibresource{mpc.bib}
 
