Moves to better structure for side-channels

--- a/sidechannels/contents.tex
+++ b/sidechannels/contents.tex
@@ -1,18 +1,4 @@
-\title{%
-  Side-channel attacks
-}
-\author{Daniel Bosk}
-\institute[MIUN IST]{%
-  Department of Information Systems and Technology\\
-  Mid Sweden University, Sundsvall.
-}
-\date{\today}
-
-
-\begin{frame}
-  \maketitle{}
-\end{frame}
-
+\mode*
 
 % Since this a solution template for a generic talk, very little can
 % be said about how it should be structured. However, the talk length
