--- a/sidechannels/sidechannels-slides.tex
+++ b/sidechannels/sidechannels-slides.tex
@@ -96,7 +96,17 @@
 
 
 \begin{document}
-\mode<all>
-\input{contents.tex}
-\mode*
+\title{%
+  Side-channel attacks
+}
+\author{Daniel Bosk}
+\institute[MIUN IST]{%
+  Department of Information Systems and Technology\\
+  Mid Sweden University, Sundsvall.
+}
+\date{\today}
+
+\maketitle
+
+\mode<all>{\input{contents.tex}}
 \end{document}
