--- a/shared-key/preamble.tex
+++ b/shared-key/preamble.tex
@@ -14,7 +14,7 @@
 
 \setbeamertemplate{bibliography item}[text]
 \usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
-\addbibresource{shared-key.bib}
+\addbibresource{bibliography.bib}
 
 \usepackage[std,math,crypto,mpc]{bibsp}
 
