--- a/one-way/preamble.tex
+++ b/one-way/preamble.tex
@@ -14,7 +14,7 @@
 
 \setbeamertemplate{bibliography item}[text]
 \usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
-\addbibresource{one-way.bib}
+\addbibresource{bibliography.bib}
 
 \usepackage[std,math,crypto,mpc]{bibsp}
 
