Adapts intro to new bibsp

--- a/intro/preamble.tex
+++ b/intro/preamble.tex
@@ -16,7 +16,7 @@
 \usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
 \addbibresource{intro.bib}
 
-\usepackage[std,math,crypto,mpc]{bibsp}
+\usepackage{bibsp}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
