Fixes title on zkp-smc

--- a/zkp-smc/zkp-smc-slides.tex
+++ b/zkp-smc/zkp-smc-slides.tex
@@ -32,7 +32,7 @@
 
 \begin{document}
 \title{%
-  A High-Level Overview of Cryptography
+  Zero-knowledge and multiparty computations
 }
 \author{%
   Daniel Bosk
