Fixes typo in shared-key

--- a/shared-key/contents.tex
+++ b/shared-key/contents.tex
@@ -27,8 +27,8 @@
 
         \pause{}
 
-      \item If Eve captures the whatever Alice sent, she shouldn't learn 
-        anything about the message.
+      \item If Eve captures whatever Alice sent, she shouldn't learn anything 
+        about the message.
 
         \pause{}
 
