Fixes typo in zkp-smc

--- a/zkp-smc/contents.tex
+++ b/zkp-smc/contents.tex
@@ -265,7 +265,7 @@
       \item Transcript for protocol: \((t, c, s)\).
 
       \item Probability for transcript occurring: \(\frac{1}{|R|}\cdot 
-          \frac{1}{\deg g}\).
+          \frac{1}{|R'|}\).
 
         \pause{}
 
