--- a/zkp-smc/zkp-smc.bib
+++ b/zkp-smc/zkp-smc.bib
@@ -1,7 +1,8 @@
 @book{EOCS,
   title={Encyclopedia of cryptography and security},
   author={Van Tilborg, Henk CA and Jajodia, Sushil},
-  year={2014},
-  publisher={Springer Science \& Business Media}
+  year={2011},
+  publisher={Springer Science \& Business Media},
+  URL={https://link.springer.com/referencework/10.1007%2F978-1-4419-5906-5}
 }
 
