Changes zkp-smc to use new bibsp

--- a/zkp-smc/preamble.tex
+++ b/zkp-smc/preamble.tex
@@ -18,7 +18,7 @@
 \addbibresource{crypto.bib}
 \addbibresource{mpc.bib}
 
-\usepackage[std,math,crypto,mpc]{bibsp}
+\usepackage{bibsp}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
